--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-    background-image: url(pexels-pixabay-414974.jpg);
+    background-image: url(index.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
